--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -50,13 +50,13 @@ year = "1991"
 
 
 @article{truyen04,
-author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen, Pierre Verbaeten",
+author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen and others",
 title = "A Generalization and Solution to the Common Ancestor Dilemma Problem in Delegation-Based Object Systems",
 year = "2004"
 }
 
 @book{robert03,
-	author = Martin Robert",
+	author = "Martin Robert",
 	title = "Agile Software Development, Principles, Patterns, and Practices",
 	date = "2003",
 	isbn = "0135974445",
@@ -75,14 +75,14 @@ year = "2004"
 @book{clean-code,
 	author = {Robert C. Martin},
 	title = {Clean Code},
-	date = {December 2009},
+	date = {2009-12},
 	publisher = {Pearson Education Inc.},
 	isbn = {978-0-13-235088-4},
 }
 @article{data-types,
 	author={Luca Cardelli, Peter Wegner},
 	title = {On Understanding Types, Data Abstraction, and Polymorphism},
-	date = {December 1985}
+	date = {1985-12}
 }
 @article{coupling,
 	author={Johann Eder, Gerti Kappel, Michael Schrefl},
@@ -101,7 +101,7 @@ year = "2004"
 }
 @book{server,
 	author={Gilbert Held},
-	title = {Server Management (Best Practices},
+	title = {Server Management (Best Practices)},
 	date = {2000},
 	isbn={978-0849398230},
 	publisher={Auerbach Publications}
