--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -57,7 +57,7 @@
 %% See babel documentation for further details.
 
 %% BibLaTeX-settings: (see biblatex reference for further description)
-\newcommand{\mybiblatexstyle}{authoryear}
+\newcommand{\mybiblatexstyle}{numeric}
 %% e.g., "alphabetic", "authoryear", ...
 %% The biblatex style which is being used for referencing. See
 %% biblatex documentation for further details and more values.
@@ -68,7 +68,7 @@
 %%          not have an option "dashed=..." and causes an error if it
 %%          does not get removed from the list of options.
 
-\newcommand{\mybiblatexdashed}{false}  %% "true" or "false"
+%\newcommand{\mybiblatexdashed}{false}  %% "true" or "false"
 %% If true: replace recurring reference authors with a dash.
 
 \newcommand{\mybiblatexbackref}{true}  %% "true" or "false"
@@ -136,7 +136,7 @@
 \newcommand{\mykeywords}{KEYWORDS}  %% also used for PDF metadata (hyperref)
 
 %% this information is used only for generating the title page:
-\newcommand{\myworktitle}{Bachelor's Thesis - Exposeé}  %% official type of work like ``Master theses''
+\newcommand{\myworktitle}{Bachelor's Thesis}  %% official type of work like ``Master theses''
 \newcommand{\mygrade}{Bachelor of Science} %% title you are getting with this work like ``Master of ...''
 \newcommand{\mystudy}{Software Development and Management} %% your study like ``Arts''
 \newcommand{\myuniversity}{Graz University of Technology} %% your university/school
@@ -147,13 +147,13 @@
 \newcommand{\myhomestreet}{Andreas-Hofer-Platz 3/8} %% your home street (with house number)
 \newcommand{\myhometown}{Graz} %% your home town
 \newcommand{\myhomepostalnumber}{8010} %% your postal number of home town
-\newcommand{\mysubmissionmonth}{July} %% month you are handing in
+\newcommand{\mysubmissionmonth}{September} %% month you are handing in
 \newcommand{\mysubmissionyear}{2017} %% year you are handing in
 \newcommand{\mysubmissiontown}{\myhometown} %% town of handing in (or \myhometown)
 
 %% additional information for generic_documentation title page
 \newcommand{\myid}{1430529} %% Matrikelnummer
-\newcommand{\mylecture}{LECTURE} %%
+\newcommand{\mylecture}{} %%
 
 
 %% ========================================================================
